--- a/posts/federated-logins.mdx
+++ b/posts/federated-logins.mdx
@@ -1,6 +1,6 @@
 # User Authentication Behaviour
 
-Previously I explained this blog’s <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>. Next I provide a brief overview of some key points that you should understood about OAuth and user authentication.
+Previously I explained this blog’s <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>. Next I provide a brief overview of some key points that you should understand about OAuth and user authentication.
 
 ### The OpenID Connect Code Flow
 
