--- a/posts/home.mdx
+++ b/posts/home.mdx
@@ -2,13 +2,13 @@
 
 This blog is a getting started guide for developing modern APIs, browser based apps and mobile apps. The main focus is reliability and productive development setups so that you manage the distributed architecture effectively. Before getting into the details, let’s set the scene in terms of related business goals and requirements.
 
-### Company Software Platforms
+### Software Platforms
 
-Software companies often want to build interactive web and API solutions, to enable a modern and dynamic user experience. It is common to therefore build *Single Page Applications (SPA)*, with a technical focus on front end development. Later the company will add mobile apps, and the same APIs are also used by those clients. All of this seems straightforward, but end-to-end flows require some foundations before the solution is production-ready.
+Organizations often want to build interactive web and API solutions, to enable a modern and dynamic user experience. It is common to therefore build *Single Page Applications (SPA)*, with a technical focus on frontend development. Later, the organization add mobile apps that use the same APIs. All of this seems straightforward, but end-to-end flows require foundations before the solution is production-ready.
 
 ### API Foundations
 
-Before most APIs and clients can be run in production, they need foundations. An essential one is usually security, to authenticate users and authorize access to data. The overall solution should also have a number of technical qualities:
+Before most APIs and clients can be run in production, they need a number of technical qualities:
 
 | Quality | Description |
 | ------- | ----------- | 
