--- a/posts/web-architecture-goals.mdx
+++ b/posts/web-architecture-goals.mdx
@@ -8,13 +8,13 @@ Client-side web apps separate HTML and data concerns to deliver a fast experienc
 
 ![React SPA framework](/images/10/react.jpg)
 
-### Productive Front End Development
+### Productive Frontend Development
 
 Technologies such as React are typically easier to manage from a development viewpoint than older website solutions. Developers no longer need to battle with a web backend that dictates frontend behaviour. OAuth also enables web apps to externalise their security to the authorization server, and to libraries written by experts. This results in simplified application code, due to the outsourced security.
 
 ### Good Global Performance
 
-Most companies want good global performance for their internet web applications. A *Content Delivery Network (CDN)* is the standard solution for managing web latency. It is harder to enable for web backends that execute code such as cookie issuing, leading to restricted hosting options.
+You are likely to want good global performance for your internet web applications. A *Content Delivery Network (CDN)* is the standard solution for managing web latency. It is harder to enable for web backends that execute code such as cookie issuing, leading to restricted hosting options.
 
 ![Content delivery network](/images/10/cdn.jpg)
 
