--- a/posts/logout.mdx
+++ b/posts/logout.mdx
@@ -1,42 +1,40 @@
 # Logout
 
-Previously we discussed the initial <Link href='/posts/user-sessions-and-token-renewal'>Access Token Renewal</Link> solution for our SPA.  Next we will provide a brief overview of practical logout behaviour for OAuth-secured apps.
+Previously I explained how <Link href='/posts/user-sessions-and-token-renewal'>IFrame Access Token Renewal</Link> can work for SPAs. Next I provide a brief overview of practical logout behaviours for OAuth-secured apps.
 
-### Logout User Behaviour
+### Logouts and Users
 
-Most commonly, users simply close the app to finish interacting with an app, rather than explicitly signing out. A big reason why many companies want to support logout functionality in an OAuth app is for test purposes. It can be useful to sign in to your UI as multiple test accounts with different settings or access rights.
+Most commonly, users simply close the app to finish interacting with an app, rather than explicitly signing out. A big reason why many organizations want to support logout functionality in an OAuth-secured app is for test purposes. It can be useful to sign in to a frontend application using multiple test accounts with different user preferences or access rights.
 
 ### OpenID Connect Logout Standards
 
-OpenID Connect logout supports multiple standards related to single logout. However, some of these rely on techniques such as sending authorization server cookies from iframes, and may no longer work.
-
-This blog will use only [RP Initiated Logout](https://openid.net/specs/openid-connect-rpinitiated-1_0.html), which works reliably, and this behaviour will be implemented for all apps. For single page applications, multi-tab logout will also be implemented.
-
-RP initiated logout runs a top level redirect to end the user’s authenticated session. This expires cookies in the authorization server. If an external identity provider is used, cookies are also expired in that system.
+OpenID Connect logout supports multiple standards related to single logout. However, some of these rely on techniques such as sending authorization server cookies from iframes, and may no longer work. This blog's code samples therefore only use [RP Initiated Logout](https://openid.net/specs/openid-connect-rpinitiated-1_0.html), which works reliably, For single page applications, I also implement multi-tab logout.
 
 ### RP Initiated Logout Request Messages
 
-This involves an HTTP redirect to the *End Session Endpoint*, and the request message commonly uses the following query parameters, where the client either sends a *client_id* or *id_token_hint* to the authorization server to identify itself. The client also sends its SSO cookie:
+This involves an HTTP top level redirect to the *End Session Endpoint*, and the request message commonly uses the following query parameters, where the client either sends a *client_id* or *id_token_hint* to the authorization server to identify itself.
 
 | Field | Description |
 | ----- | ----------- |
-| <span style={{color:'green'}}>**client_id**</span> | The client can send its ID to identify itself to the authorization server |
-| <span style={{color:'green'}}>**id_token_hint**</span> | Or the client can send its ID token to prove its identity |
-| <span style={{color:'green'}}>**post_logout_redirect_uri**</span> | An unsecured location to return to in the app once logout completes |
-| <span style={{color:'green'}}>**state**</span> | An optional field to allow the response to be correlated to the request |
+| <span style={{color:'green'}}>**client_id**</span> | The client can send its ID to identify itself to the authorization server. |
+| <span style={{color:'green'}}>**id_token_hint**</span> | Or the client can send its ID token to prove its identity. |
+| <span style={{color:'green'}}>**post_logout_redirect_uri**</span> | The client can provide a location to return to in the app once logout completes. |
+| <span style={{color:'green'}}>**state**</span> | The client can provide an optional field and validate that it receives the same value in the response. |
+
+The browser also sends the authorization server's SSO cookie in the request, since it is sent on a top level redirect. The authorization server response expires the SSO cookie.
 
 ### Vendor Specific Behaviour
 
-To add to the complexity, some authorization servers use non-standard logout solutions. At the time of writing this includes AWS Cognito, which requires a non-standard parameter name. Although this is a minor difference, it prevents the logout function of OAuth libraries from working, so your code needs to implement a workaround.
+To add to the complexity, some authorization servers use non-standard logout solutions. At the time of writing this includes AWS Cognito, this blog's default authorization server, which requires a non-standard parameter name. Although this is a minor difference, it prevents the logout function of OAuth libraries from working, so your code needs to implement a workaround.
 
 | Field | Description |
 | ----- | ----------- |
-| <span style={{color:'green'}}>**client_id**</span> | The client can send its ID to identify itself to the authorization server |
-| <span style={{color:'green'}}>**logout_uri**</span> | The *post_logout_redirect_uri* must be provided in a parameter with a different name |
+| <span style={{color:'green'}}>**client_id**</span> | The client can send its ID to identify itself to the authorization server. |
+| <span style={{color:'green'}}>**logout_uri**</span> | The *post_logout_redirect_uri* must be provided in a parameter with a different name. |
 
 ### Allowed Post Logout Redirect URIs
 
-Some providers do not allow post logout redirect URIs to include a hash location so you may instead need to redirect to a small logout HTML page, then manage this redirect within the app. The next SPA code example will follow this approach:
+Some providers do not allow post logout redirect URIs to include a hash location so you may instead need to redirect to a small logout HTML page, then manage this redirect within the app. The next SPA code example follows this approach:
 
 ```html
 <!DOCTYPE html>
@@ -53,54 +51,44 @@ Some providers do not allow post logout redirect URIs to include a hash location
 ```
 ### Post Logout Location
 
-When logout has completed, our code samples will return the user to a *Post Logout Landing Page* within the app, then present the user with an option to sign in again:
+When logout has completed, this blog's code samples return the user to a *Post Logout Landing Page* within the app, then present the user with an option to sign in again:
 
 ![post logout landing](/images/160/post-logout-landing.jpg?v=20240822)
 
-### Multi Tab Logout in Web UIs
+### Multi Tab Logout in SPAs
 
-It uses to be possible to implement logout for SPAs using [OpenID Connect Session Management](https://openid.net/specs/openid-connect-session-1_0.html). In this flow, an iframe on each tab polled the authorization server, sending it the SSO session cookie, to check whether there had been an external logout, such as on another browser tab.
+It used to be possible for SPAs to use [OpenID Connect Session Management](https://openid.net/specs/openid-connect-session-1_0.html). In this flow, an iframe within each browser window polls the authorization server, sending it the SSO cookie, to check whether the user logged out elsewhere. However, since the SSO cookie is third-party, some browsers now refuse to send it from an iframe. Yet you can implement multi-tab logout if you simply store a boolean setting in local storage and use the [Browser Storage API](https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API) to watch for changes across tabs. This blog’s code samples use this approach.
 
 ![multi tab logout](/images/160/multi-tab-logout.jpg?v=20240822)
 
-This no longer works reliably however, since some browsers, such as Safari with default settings, may treat the SSO session cookie as being third party, and therefore drop it during this flow.
-
-Yet similar behaviour for a web app can be achieved by storing a boolean setting in local storage and using the [Browser Storage API](https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API) to watch for changes across tabs. This blog’s code samples will use this approach.
-
 ### Benign Logout Errors
 
-Some authorization servers may return logout error responses if you attempt to logout when the session is already expired. This blog’s samples will ignore logout errors, by just removing tokens then navigating to the post logout location.
+Some authorization servers may return logout error responses if you attempt to logout when there is no SSO cookie. This blog’s code samples ignore logout errors, to avoid user confusion, and simply navigate to the post logout location.
 
-### Controlling Logout
+### Logout User Experience
 
-An SSO cookie in a user agent is a pointer to authorization server state, and can represent sessions for multiple clients and users. When a logout is triggered for one application, it may impact other apps, and you may not always be able to achieve your desired usability.
-
-There may be other logout annoyances on particular platforms. An example is on iOS, where an *ASWebAuthenticationSession* window is used for RP Initiated Logout. This always indicates a *Sign In* operation, and it is not possible to update the text to indicate that a *Sign Out* is taking place:
+An SSO cookie in a user agent is a pointer to authorization server state, and can represent sessions for multiple clients and users. When a logout is triggered for one application, it may impact other apps, and you may not always be able to achieve your desired usability. There may be other logout annoyances on particular platforms. An example is on iOS, where an *ASWebAuthenticationSession* window is used during logout but always indicates a *Sign In* operation, and you cannot override the text:
 
 <div className="smallimage">
 ![ios logout](/images/160/ios-logout.jpg)
 </div>
 
-When you run into this type of problem, a better choice can be for the app to avoid using RP Initiated Logout. Instead, the app can simply remove its tokens and move the user to a logged out page.
-
-By default though, the next login will then perform an automatic login with no user prompts. To prevent this you can control behaviour using [OpenID Connect request parameters](https://openid.net/specs/openid-connect-core-1_0.html#AuthRequest). In particular the *prompt=login* parameter can force a new login when the app no longer has any tokens.
+When you run into this type of problem, a better choice can be for the app to avoid using RP initiated logout. Instead, the app can simply remove its tokens and move the user to a logged out page. By default though, the next login performs an automatic login with no user prompts. To prevent this you can control behaviour using [OpenID Connect request parameters](https://openid.net/specs/openid-connect-core-1_0.html#AuthRequest). In particular the *prompt=login* parameter can force a new login.
 
 ### Access Token Validity After Logout
 
-When a user signs out, an OAuth secured app that uses refresh tokens can optionally make a revocation call to the Authorization Server, to ensure that the refresh token can no longer be used.
+When a user signs out, an OAuth secured app that uses refresh tokens can optionally make a revocation call to the authorization server, to prevent anyone using the refresh token.
 
-Sometimes developers also expect all access tokens to be immediately rejected by APIs, to enable the same behaviour as in older cookie based web apps. For this to work, APIs would need to call the authorization server on every API request, leading to performance problems.
+Sometimes developers also expect all access tokens to be immediately rejected by APIs, to enable the same behaviour as cookie-based web sessions. For this to work, APIs would need to call the authorization server on every API request, leading to performance problems. Instead, access tokens are bearer tokens and remain usable until they expire. This blog's apps implement the following behaviour:
 
-Instead, access tokens are bearer tokens and remain usable until they expire. This blog's apps implement the following behaviour:
-
-- Client applications discard all tokens upon logout
-- Access tokens are short lived so that they expire soon after logout 
+- Clients discard all tokens upon logout.
+- Access tokens are short-lived so that they expire soon after logout.
 
 ### Where Are We?
 
-We have explained how this blog’s logout behaviour will work. RP Initiated and multi-tab logout will be implemented in the next SPA code sample, in a few posts’ time.
+I explained how OAuth logout does not always work as perfectly as you may expect. It can be difficult to reason about single logout solutions. They  can add complexity and you may run into cookie-based limitations. Therefore, this blog follows a practical approach and keeps logout implementations simple.
 
 ### Next
 
-- Next we will discuss the role of <Link href='/posts/id-tokens'>ID Tokens</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- I explain the role of <Link href='/posts/id-tokens'>ID Tokens</Link>.
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
