--- a/posts/api-authorization-design.mdx
+++ b/posts/api-authorization-design.mdx
@@ -26,7 +26,7 @@ The OAuth 2.0 authorization framework enables you to protect business data using
 
 ### Step 1: Token Validation
 
-The <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link> post described how an API verifies the JWT’s digital signature. If the token is not valid you return a 401 error such as the below payload. Think of token validation as an entry level check to authenticate the request to the API, after which the API can trust data in the access token’s payload.
+The <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link> post described how an API verifies the JWT’s digital signature. If the token is not valid you return a 401 error such as the below payload. Think of token validation as an entry level check to authenticate the request to the API. The API then trusts the access token’s payload.
 
 ```json
 {
@@ -37,20 +37,19 @@ The <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation<
 
 ### Step 2: Scopes
 
-In OAuth you use scopes to restrict API privileges that you grant to clients. You assign one or more scopes to the OAuth client when you register it in the authorization server. The OAuth 2.0 specification does not define how you should use scopes, and that is up to you to design. Often a good choice is to do so based on business area, starting with high level values:
+In OAuth you use scopes to restrict API privileges that you grant to clients. You assign one or more scopes to the OAuth client when you register it in the authorization server. Often, a good choice is to do so based on business area, starting with high level values:
 
 | Examples | Usage |
 | -------- | ----- |
 | <span style={{color:'green'}}>**sales**</span> | You might assign this scope for use at API endpoints that deal with selling products to the public. |
 | <span style={{color:'green'}}>**finance**</span> | You might use this scope for API endpoints that deal with a higher security money-based area. |
  
-A client with an access token that contains only a *sales* scope can never successfully access data from *finance* API endpoints. The API would immediately reject the access token with a 403 forbidden error. This is true even if the user has finance rights. Therefore, scopes enable you to set boundaries on where a client can use access tokens.
+A client with an access token that contains only a *sales* scope can never successfully access data from *finance* API endpoints. The API would immediately reject the access token with a 403 forbidden error. This is true even if the user has finance rights.
 
 ### Scopes and Manageability
 
-You cannot use the scopes that you design for dynamic purposes, such as different scopes per user. Aim to keep scopes fairly high level, since creating too many scopes can result in productivity problems. For example, you might need to frequently update clients with new scopes, or deal with access token versioning in APIs. Consider only adding new scopes when you extend APIs to new business areas.
+You cannot use the scopes that you design for dynamic purposes, such as different scopes per user. Aim to keep scopes fairly high level. In this blog I use a fictional *investments* scope and frontend clients need access tokens with this scope to call any endpoint of my example APIs. Creating too many scopes too early can result in productivity problems, like needing to frequently update clients with new scopes, or deal with access token versioning in APIs. Consider only adding new scopes when you extend APIs to new business areas.
 
-In this blog I use a fictional *investments* scope and frontend clients need access tokens with this scope to call any endpoint of my example APIs. More generally, scopes represent data and can be hierarchical. Scopes are also useful when you want to get a higher privilege access token. For example, before performing a money transfer you might send an authorization redirect requesting a high privilege scope such as *investments:payment*. A high privilege API endpoint could require that scope. 
 
 You don't need many scopes since you use claims for most authorization. Yet you should design scopes in terms of end-to-end flows. If multiple APIs call each other, they should each validate an access token and implement business authorization. When a user is present, each API should receive the user identity and its required scopes and claims in its access token. The source API can send its current access token or use OAuth token exchange to get a new one from the authorization server with different scopes. 
 
@@ -74,9 +73,7 @@ An API should require its own identity to be present in the audience (aud) claim
 
 Claims enable the deeper OAuth authorization behaviour. For each scope that the authorization server issues to access tokens, it also issues a set of claims. The <Link href='/posts/managed-authorization-server-setup'>Cloud Authorization Server Setup</Link> blog post explains how this works for this blog’s default authorization server. 
 
-You can issue different claims to access tokens per user and they are more flexible than scopes. You might consider issuing a scope like *investments:read*, though this is often insufficient, since users often have read-only access to some data and read-write access to other data. Use claims to represent those types of rules. Claims can be primitive values, arrays or objects.
-
-In some cases, APIs cannot decide how to authorize solely from a user ID in an access token. For example, an access token with an *investments:payment* scope might also include payment-related claims from third-party systems that describe the payment, which an API endpoint needs to use to authorize the payment correctly.
+You can issue different claims to access tokens per user, and they can contain any data you need, so claims are much more flexible than scopes. In more advanced use cases, APIs cannot decide how to authorize solely from a user ID in an access token. Instead, OAuth enables you to design solutions where the authorization server provides APIs with runtime claims from trusted third-party systems.
 
 ### Claims Principal
 
@@ -101,13 +98,13 @@ Of course, you must always make all of the correct authorization checks in your 
 
 In many real-world systems, claims in access tokens do not provide every data value that you need for authorization. For example, some systems use roles that map to fine-grained permissions representing levels of access, such as the branch rules listed at the start of this post. Sometimes these permissions are volatile and you change or remodel them often.
 
-You should manage volatile business permissions in your APIs rather than your authorization server. You usually only need to issue a few custom claims to access tokens. These values should be stable and should not change within a user's authenticated session. When your API authorizes requests it can derive volatile business permissions from other claims in the access token, like a user ID or role.
-
-Therefore, APIs often need to combine fine-grained business permissions with claims from the access token. As for your scopes design, when you get a good balance you use stable access tokens and you reduce the need to manage access tokens versioning. You can deploy APIs frequently without needing to redeploy or reconfigure the authorization server.
+You should not manage volatile business permissions in your authorization server, since that can lead to the same productivity problems that you get with poorly designed scopes. You usually only need to issue a few custom claims to access tokens. These values should be stable and should not change within a user's authenticated session. When your API authorizes requests it can look up volatile business permissions from other claims in the access token, which is the approach used by this blog's final APIs.
 
 ### Customizing the Claims Principal
 
-In your API code, you may therefore need to combine access token claims with extra values. You can do this in multiple ways, according to your coding preferences. When I first wrote this blog, the AWS Cognito authorization server did not support issuing custom claims to access tokens, yet I still wanted a useful and expressive claims principal. Therefore I designed an object with the following structure:
+In your API code, you may therefore need to combine access token claims with extra values. You can do this in multiple ways, according to your coding preferences. When I first wrote this blog, the AWS Cognito authorization server did not support issuing custom claims to access tokens, yet I still wanted a useful and expressive claims principal that demonstrated my design intent. I did not want my code to be dictated by the limitations of an authorization server implementation.
+
+Therefore, I designed an object with the following structure, so that I could inject it into business logic classes and the claims that should be in the access token were readily available. In addition, there may be some main authorization values that you may prefer not to issue to access tokens for manageability reasons. These might be good candidates to represent as extra claims.
 
 ```json
 export class ClaimsPrincipal {
@@ -116,11 +113,11 @@ export class ClaimsPrincipal {
 }
 ```
 
-My code samples continue to use this technique, to show how to take closer control of claims. I perform JWT validation on every request and then look up extra values from a trusted source - like the API's database - before creating the claims principal. The business logic classes then receive a useful object with which to implement their authorization:
+My API code samples continue to use this technique, since it is useful to know how to customize OAuth processing in API technology stacks and to be in control of your own objects. The APIs perform JWT validation on every request and then look up extra values from a trusted source - like the API's database - before creating the claims principal. The business logic classes then receive a useful object with which to implement their authorization:
 
 ![token to claims](/images/130/token-to-claims.jpg)
 
-This code setup is one way to ensure that your API's business logic receives future changes to volatile business permissions. Understand though, that true claims are those that the authorization server asserts when it cryptographically signs access tokens. The main identity values should always be issued to access tokens when possible, so that the API receives them in a cryptographically verifiable format. 
+Understand that true claims are those that the authorization server asserts when it cryptographically signs access tokens. The main identity values should always be issued to access tokens when possible, so that the API receives them in a cryptographically verifiable format. Yet you might consider the extra values to be claims in practical terms, when they originate from a source that the API trusts just as much as the authorization server. Therefore, extra claims lookup is one option you can consider for a productive API code setup.
 
 ### This Blog’s Example Claims
 
@@ -147,7 +144,7 @@ The following extra claims are looked up when the API first receives its access 
 | <span style={{color:'green'}}>**Title**</span> | A business title for the end user in a particular context, which is displayed by the frontend application. |
 | <span style={{color:'green'}}>**Regions**</span> | An array claim representing a simplified version of the branches concept described at the start of this post. |
 
-The API authorizes access to resources using both the *role* from the access token and the *regions* array from the extra claims. If business authorization rules evolve, the API can update the extra claims object updates to the authorization server.
+The API authorizes access to resources using both the *role* from the access token and the *regions* array from the extra claims:
 
 ```typescript
 private _isUserAuthorizedForCompany(company: Company): boolean {
@@ -198,7 +195,7 @@ export class OAuthFilter {
 }
 ```
 
-This technique adds complexity to API code, so avoid it when getting started with OAuth. Instead, use claims from the access token payload. Understand though, that access token claims may not provide all of the data that your API needs for its authorization.
+This technique adds complexity to API code, so avoid it when getting started with OAuth. Instead, use claims from the access token payload. Understand though, that some claims-related plumbing code might set up your API's business logic classes in productive ways. The plumbing only needs writing once, after which you can implement many claims checks in your business logic with clean code.
 
 ### Where Are We?
 
