--- a/posts/developer-ssl-setup.mdx
+++ b/posts/developer-ssl-setup.mdx
@@ -223,7 +223,7 @@ You may need to split the root certificates into individual files. To manage upd
 
 ### Trust a Root Certificate in Browsers
 
-Browsers often inherit SSL trust from the above operating system default trust stores, though there are some exceptions. On Firefox, you must navigate to *Options / Privacy & Security / Certificates / View Certificates / Authorities / Import* to import a root certificate. You must also do so if you run Google Chrome on Linux. When you add trust, select the option to *Trust this CA to identify websites*.
+Browsers mostly inherit SSL trust from their operating system default trust stores. You therefore enable certificate trust as I explain above, though there are some browser exceptions. On Firefox, you must navigate to *Options / Privacy & Security / Certificates / View Certificates / Authorities / Import* to import a root certificate. You must also do so if you run Google Chrome on Linux. When you add trust, select the option to *Trust this CA to identify websites*.
 
 ![firefox trust](/images/110/firefox-trust.jpg?v=20240728)
 
