--- a/posts/improved-spa-code-sample-overview.mdx
+++ b/posts/improved-spa-code-sample-overview.mdx
@@ -1,35 +1,35 @@
 # Updated SPA and API – Overview
 
-Previously we explained the use of <Link href='/posts/id-tokens'>ID Tokens</Link> in applications. Next we will extend the initial SPA and API code sample, to add some essential behaviour related to API authorization and frontend user sessions.
+Previously I summarised the use of <Link href='/posts/id-tokens'>ID Tokens</Link> in applications. Next I explain how to complete the initial SPA and API code sample, to add the main frontend session behaviors and to add claims-based authorization to the API.
 
 ### New Features
 
-Our updated SPA and API code sample has the following additional features:
+The updated SPA and API code sample has the following additional features:
 
 | Feature | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**Claims Based Authorization**</span> | The API provides a more complete and future facing claims based authorization solution |
-| <span style={{color:'green'}}>**In Memory Token Storage**</span> | The SPA now stores OAuth tokens only in memory, to improve the browser security a little |
-| <span style={{color:'green'}}>**Silent Token Renewal**</span> | The SPA now supports silent access token renewal using the SSO Session Cookie |
-| <span style={{color:'green'}}>**Multi Tab Browsing**</span> | The token renewal solution enables multi tab browsing without redirecting the user |
-| <span style={{color:'green'}}>**Logout**</span> | The SPA implements a basic form of logout, including signing out across multiple browser tabs |
-| <span style={{color:'green'}}>**Developer SSL URLs**</span> | Both the SPA and API have been updated to run on a development computer using real world HTTPS URLs |
+| <span style={{color:'green'}}>**Claims Based Authorization**</span> | The API provides a more complete and future-proof claims-based authorization solution. |
+| <span style={{color:'green'}}>**In Memory Token Storage**</span> | The SPA now stores OAuth tokens only in memory, to improve the browser security a little. |
+| <span style={{color:'green'}}>**Silent Token Renewal**</span> | The SPA now supports silent access token renewal using the SSO cookie. |
+| <span style={{color:'green'}}>**Multi Tab Browsing**</span> | The token renewal solution enables multi tab-browsing without noticeable user impact. |
+| <span style={{color:'green'}}>**Logout**</span> | The SPA implements a basic form of logout, including logout across multiple browser tabs. |
+| <span style={{color:'green'}}>**Developer SSL URLs**</span> | Both the SPA and API run on a development computer using real-world HTTPS URLs. |
 
 ### Updated Components
 
-The updated endpoints and components used are shown below, and include a memory cache in the API, use to store values used for authorization:
+I show the updated components and endpoints below, which include the use of an API memory cache to store authorization values used across multiple requests:
 
 ![components](/images/170/components.jpg)
 
 ### SPAs in 2021
 
-<span style={{color:'red'}}>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in JavaScript. This is no longer recommended, and your production apps should instead use a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.</span>
+<span style={{color:'red'}}>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in JavaScript. In 2021 the best practice is to upgrade to a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.</span>
 
-The traditional SPA flow remains useful for representing a pure SPA architecture, and learning about OAuth endpoints and messages. This blog’s <Link href='/posts/final-spa-overview'>Final SPA</Link> provides a BFF based solution, but requires a more complex flow.
+The traditional SPA flow remains useful for representing a pure SPA architecture and learning about OAuth techniques. This blog’s <Link href='/posts/final-spa-overview'>Final SPA</Link> provides a BFF based solution, but requires a more complex flow.
 
 ### Code Download
 
-The updated SPA and API code sample can be downloaded from here:
+Clone the project with the below command:
 
 ```bash
 git clone https://github.com/gary-archer/oauth.websample2
@@ -47,7 +47,7 @@ The SPA uses the same components as the initial code sample, with SPA code that 
 
 ### View Updated Configuration
 
-The SPA now uses more complete OAuth settings and SSL based URLs:
+The SPA now uses more complete OAuth settings and HTTPS URLs:
 
 ```json
 {
@@ -66,7 +66,7 @@ The SPA now uses more complete OAuth settings and SSL based URLs:
 }
 ```
 
-The API configuration has been updated in a similar manner:
+The API configuration is similarly updated:
 
 ```json
 {
@@ -92,13 +92,13 @@ The API configuration has been updated in a similar manner:
 
 ### Updated OAuth Client
 
-The SPA now has an updated client registered in the AWS Cognito authorization server, which now uses a *Custom Scope* and a *Post Logout Redirect URI*:
+The SPA now requires an updated client registration. In AWS Cognito, this blog's default authorization server, there are new settings for *Custom Scope* and *Post Logout Redirect URI*:
 
 ![spa client](/images/170/spa-client.jpg)
 
 ### Build the Code
 
-First run the build script to prepare the SPA and API, which mostly just runs *npm install* to download dependencies:
+First run the build script to prepare the SPA and API, which primarily runs *npm install* to download dependencies:
 
 ```bash
 ./build.sh
@@ -106,7 +106,7 @@ First run the build script to prepare the SPA and API, which mostly just runs *n
 
 ### Configure SSL Browser Trust
 
-The build script also downloads OpenSSL generated certificates from a [Development Certificates](https://github.com/gary-archer/oauth.developmentcertificates) repository to a subdirectory of the API. The API and web static content hosting uses SSL so you must ensure that your browser trusts the root certificate at the below location, as explained in the <Link href='/posts/developer-ssl-setup'>Developer SSL Setup</Link> post.
+The build script also downloads OpenSSL generated certificates from a [Development Certificates](https://github.com/gary-archer/oauth.developmentcertificates) repository to a subdirectory of the API. The API and web static content hosting uses SSL so you must ensure that your browser trusts the root certificate at the below location, as explained in the <Link href='/posts/developer-ssl-setup#trust-a-root-certificate-in-browsers'>Developer SSL Setup</Link> post.
 
 ```markdown
 api/certs/authsamples-dev.ca.crt
@@ -114,7 +114,7 @@ api/certs/authsamples-dev.ca.crt
 
 ### Run the SPA and API
 
-Next execute the following script to run SPA and API in separate terminal windows, which mostly just runs *npm start*:
+Next execute the following script to run SPA and API in separate terminal windows. This primarily just runs *npm start* to run both the SPA and API in watch mode:
 
 ```bash
 ./run.sh
@@ -122,37 +122,37 @@ Next execute the following script to run SPA and API in separate terminal window
 
 The SPA terminal window builds JavaScript bundles:
 
-![spa build](/images/170/spa-build.jpg?v=20240813)
+![spa build](/images/170/spa-build.jpg?v=20240831)
 
 The API terminal window listens for requests from the SPA on port 443:
 
-![api build](/images/170/api-build.jpg?v=20240813)
+![api build](/images/170/api-build.jpg?v=20240831)
 
 ### Test Logins with Multiple User Accounts
 
-The following AWS Cognito test account can continue to be used to sign in to the SPA:
+Continue to use the following AWS Cognito test account to sign in to the SPA:
 
 - User = *guestuser@example.com*
 - Password = *GuestPassword1*
 
-A second test account is also available, with different permissions to the data shown in the SPA:
+You can also use a second test account with higher privileges, to see additional API data in the SPA:
 
 - User = *guestadmin`@`example.com*
 - Password = *GuestPassword1*
 
-The updated SPA then shows different data depending on the user, since the API is now applying claims based authorization.
+The updated SPA shows different data depending on the user since the API now applies claims-based authorization.
 
 ### Updated Access Token
 
-After a login the following access tokens is returned to the SPA. This now contains an *investments* scope and custom claims for *manager_id* and *role*. These values are used by the API for its authorization:
+After a login the SPA receives the following access token. This now contains an *investments* scope and custom claims for *manager_id* and *role*. The API uses these values for its authorization:
 
 ![token scopes and claims](/images/170/token-scopes-and-claims.jpg)
 
-For details on how these scopes and claims are issued from AWS Cognito, see the <Link href='/posts/managed-authorization-server-setup'>Cloud Authorization Server Setup</Link> blog post.
+For details on how the authorization server issues these scopes and claims see the <Link href='/posts/managed-authorization-server-setup'>Cloud Authorization Server Setup</Link> blog post.
 
 ### API Claims Based Authorization
 
-The API’s OAuth processing reads the token claims and also looks up extra values needed to implement its authorization. Further details on design choices are provided in the <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link> blog post.
+The API’s OAuth processing reads the token claims and also looks up extra values that it needs to implement its authorization. I provide further details on my design choices in the <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link> blog post.
 
 ![extensible claims](/images/170/extensible-claims.jpg)
 
@@ -179,19 +179,19 @@ The API serves hard coded JSON data, representing multiple regions:
 ]
 ```
 
-Each user has access to data from an array of regions, and the default guest user only has access to the US region, so cannot see items 1 and 3 above. Therefore these items are filtered out of the company list:
+Each user has access to data from an array of regions, and the default guest user only has access to the US region, so I cannot see items 1 and 3. Therefore the API filters those values from the results it returns to the SPA:
 
 ![filtered list](/images/170/filtered-list.jpg?v=20240813)
 
-In the transactions view, if the user tries to access company 3 by editing the browser URL, the API denies access and returns a 404 response with a *company_not_found* error code.
+In the transactions view, if the user tries to access company 3 data by editing the browser URL, the SPA triggers an API request for an unauthorized resource. The API denies access and returns a 404 response with a *company_not_found* error code.
 
 ![authorized resource](/images/170/authorized-resource.jpg?v=20240813)
 
-The SPA handles this *Not Found For User* API error code specially and redirects to the home page, so that we avoid presenting an error display to the end user.
+The SPA handles this *Not Found For User* API error code specially and redirects to the home page, to avoid displaying a user error.
 
 ### SPA Downloads User Info
 
-As for the first code example, the SPA continues to get name details for display from the OAuth user info endpoint. Note that AWS Cognito does not allow the user info payload to be customized:
+As for the first code example, the SPA continues to get name details for display from the OpenID Connect userinfo endpoint:
 
 ```json
 {
@@ -206,7 +206,7 @@ As for the first code example, the SPA continues to get name details for display
 }
 ```
 
-The SPA also calls a user info endpoint in its own API, to get secondary user attributes, which are not stored in the identity data:
+The SPA also calls a user info endpoint in its own API to get secondary user attributes, which are not stored in the identity data:
 
 ```json
 {
@@ -221,24 +221,24 @@ The secondary user data is then rendered in a basic tooltip:
 
 ### Triggering Token Renewal
 
-The SPA now refreshes in-memory access tokens silently when they expire. This can be simulated by clicking *Expire Token* then *Reload Data*:
+The SPA now refreshes in-memory access tokens silently when they expire. You can simulated this if you click *Expire Token* then *Reload Data*:
 
 ![token expiry testing](/images/170/token-expiry-testing.jpg?v=20240813)
 
-Since tokens are stored in memory, the same renewal occurs if the browser page is refreshed or the user performs multi tab browsing by opening one of the *View Transactions* links in a new browser window. The following actions should then take place:
+Since the SPA stores tokens in-memory, the same renewal occurs if you refresh the browser page or the user performs multi-tab browsing using one of the *View Transactions* links to open a new browser window. The following actions should then take place:
 
-- The SPA receives a 401 response from the API
-- A silent iframe token renewal redirect is triggered, using the SSO cookie
-- A new access token is received without impacting the user
-- The API call is retried with the new token, which then succeeds
+- The SPA receives a 401 response from the API.
+- The SPA triggers a silent iframe token renewal redirect using the SSO cookie.
+- The SPA receives a new access token without any user impact.
+- The SPA retries the API call with the new access token.
 
 ### Token Renewal OAuth Requests
 
-The updated code sample implements the traditional SPA token renewal flow, where the SPA attempts to get a new access token by sending the SSO cookie with the *prompt=none* query parameter:
+The updated code sample implements the traditional SPA token renewal flow, where the SPA attempts to gsend the SSO cookie to get a new access token, using the *prompt=none* query parameter:
 
 ![iframe renewal request](/images/170/iframe-renewal-request.jpg?v=20240813)
 
-Yet AWS Cognito is not compliant with the iframe renewal flow, so when it is configured as the authorization server, the SPA falls back to using a refresh token to renew access tokens:
+Yet AWS Cognito is not compliant with the iframe renewal flow, so when it is the authorization server, the SPA falls back to using a refresh token to renew access tokens:
 
 ![renewal request](/images/170/renewal-request.jpg?v=20240813)
 
@@ -246,11 +246,11 @@ The response includes a new access token, so that the SPA can continue to call A
 
 ![renewal response](/images/170/renewal-response.jpg?v=20240813)
 
-Despite code being written correctly, both of these renewal flows are unsatisfactory from either a security or usability viewpoint. For further details on issues, see the <Link href='/posts/user-sessions-and-token-renewal'>IFrame Access Token Renewal</Link> post.
+Although the SPA's code implements renewal flows correctly, both of them are unsatisfactory. I explain the security and usability issues in the <Link href='/posts/user-sessions-and-token-renewal'>IFrame Access Token Renewal</Link> post.
 
 ### Logout
 
-We have also implemented our Logout Behaviour, and after logout we return to a *Post Logout Landing Page*:
+The SPA also implements logout functionality. The SPA removes its own tokens, then redirects to the authorization server sending the SSO cookie. The authorization server expires the SSO cookie to end the user's session, then redirects the browser back to its *Post Logout Redirect URI*, which renders the following view:
 
 ![logged out screen](/images/170/logged-out-screen.jpg?v=20240813)
 
@@ -260,9 +260,9 @@ A boolean flag is also stored in session storage after logout. Other tabs use th
 
 ### Where Are We?
 
-We have added missing features to our code sample, to improve SPA session management and to enable the API to authorize requests correctly. There are some open issues, and these will be resolved later, in the <Link href='/posts/final-spa-overview'>Final SPA</Link>.
+I have added missing features to the SPA and API behavior, to improve SPA session management and to enable the API to authorize requests correctly. Overall security and token renewal still have some issues, which I resolve later, in the <Link href='/posts/final-spa-overview'>Final SPA</Link>.
 
 ### Next
 
-- We will look at <Link href='/posts/updated-spa-coding-key-points'>Coding Key Points</Link> for the updated SPA
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- I provide an <Link href='/posts/updated-spa-coding-key-points'>Updated SPA Code Overview</Link>.
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
