--- a/posts/azure-active-directory-setup.mdx
+++ b/posts/azure-active-directory-setup.mdx
@@ -1,6 +1,6 @@
 # Microsoft Entra ID SPA and API Setup
 
-In our previous post we described <Link href='/posts/updated-api-coding-key-points'>API Coding Key Points</Link> for the second code sample. Next we will prove that the current code sample is a portable OAuth implementation by using a different authorization server. This will be [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) and will run in the Microsoft Azure cloud.
+In the previous post I provided an <Link href='/posts/updated-api-coding-key-points'>API Code Overview</Link> for the second code sample. Next we will prove that the current code sample is a portable OAuth implementation by using a different authorization server. This will be [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) and will run in the Microsoft Azure cloud.
 
 ### Main Objective
 
