--- a/posts/azure-ad-troubleshooting.mdx
+++ b/posts/azure-ad-troubleshooting.mdx
@@ -177,7 +177,7 @@ This flow is no longer reliable in all browsers though, since the SSO cookie may
 
 ### 9. Multi-Tab Browsing
 
-Since tokens are stored only in memory, opening a new tab / window, or reloading the current page, also runs a silent token renewal request on a hidden iframe. This may still work fairly well in some browsers, though there is a noticeable pause.
+Since tokens are stored only in-memory, opening a new tab / window, or reloading the current page, also runs a silent token renewal request on a hidden iframe. This may still work fairly well in some browsers, though there is a noticeable pause.
 
 ### 10. Multi-Tab Logout
 
