--- a/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -161,7 +161,7 @@ We can use the UI’s session buttons to simulate expiry related events during a
 
 ![expiry testing](/images/420/expiry-testing.jpg)
 
-Our first sample only stores tokens in memory, so that if we use the *Reload* option in the Electron menu, tokens are lost and the user has to sign in again. We will improve on this for the final code sample.
+Our first sample only stores tokens in-memory, so that if we use the *Reload* option in the Electron menu, tokens are lost and the user has to sign in again. We will improve on this for the final code sample.
 
 ### Step 13: Test Access Token Expiry
 
