--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -36,8 +36,8 @@ The first theme focuses on foundations and core concepts. It provides integrated
 **Updated SPA Code Sample**
 
 - <Link href='/posts/improved-spa-code-sample-overview'>Overview / How to Run the Sample</Link>
-- <Link href='/posts/updated-spa-coding-key-points'>SPA Coding Key Points</Link>
-- <Link href='/posts/updated-api-coding-key-points'>API Coding Key Points</Link>
+- <Link href='/posts/updated-spa-coding-key-points'>SPA Code Overview</Link>
+- <Link href='/posts/updated-api-coding-key-points'>API Code Overview</Link>
 
 **Variation – Microsoft Entra ID**
 
@@ -129,7 +129,7 @@ This theme covers solutions for desktop and mobile apps, and uses the recommende
 
 ### Theme 4 – Cloud Deployment
 
-The final theme covers end-to-end deployment of components to run in the cloud. Both Serverless and cloud native hosting are used, and API code remains the same whichever option is chosen.
+The final theme covers end-to-end deployment of components to run in the cloud. You can use either Serverless or cloud native hosting. API-related code remains the same whichever option is chosen.
 
 **OAuth Domain Setup**
 
