--- a/posts/jwt-access-token-validation.mdx
+++ b/posts/jwt-access-token-validation.mdx
@@ -178,7 +178,7 @@ If a malicious party issues a JWT access token with their own private key and se
 
 ### JSON Web Key Set Caching
 
-Ideally, the JOSE library should also cache the JSON Web Key Set details in memory, for best performance and reliability. On future API requests, you get the following behaviours:
+Ideally, the JOSE library should also cache the JSON Web Key Set details in-memory, for best performance and reliability. On future API requests, you get the following behaviours:
 
 
 | Input | Library Action |
