--- a/posts/updated-spa-coding-key-points.mdx
+++ b/posts/updated-spa-coding-key-points.mdx
@@ -1,14 +1,14 @@
-# Updated SPA – Coding Key Points
+# Updated SPA – Code Overview
 
-In our previous post we described the behaviour of our <Link href='/posts/improved-spa-code-sample-overview'>Updated SPA and API Code Sample</Link>. Next we will look at the key changes to the SPA code.
+In the previous post I described the behaviour of the <Link href='/posts/improved-spa-code-sample-overview'>Updated SPA and API Code Sample</Link>. Next I summarize some changes to the SPA code.
 
 ### SPA OAuth Configuration Changes
 
-Additional settings from the oidc-client-ts library have been used, to add the following features to the SPA:
+I use additional settings from the *oidc-client-ts* library to use the following features in the SPA:
 
-- In-memory token storage
-- Silent token renewal via Iframes
-- Logout
+- In-memory token storage.
+- Silent token renewal via Iframes.
+- Logout.
 
 The authenticator class therefore uses additional oidc-client-ts settings:
 
@@ -38,14 +38,14 @@ public constructor(configuration: OAuthConfiguration) {
 
 ### Enabling IFrame Renewal
 
-The final SPA uses a couple of security behaviours that are no longer recommended:
+The final SPA uses a couple of security behaviours that no longer align with security best practices:
 
 | Behaviour | Description |
 | --------- | ----------- |
-| <span style={{color:'red'}}>Refresh Tokens</span> | AWS Cognito returns refresh tokens to the browser, which should be avoided when using this flow |
-| <span style={{color:'red'}}>Access Tokens</span> | These days you should also avoid returning access tokens to the browser due to XSS threats |
+| <span style={{color:'red'}}>Refresh Tokens in the Browser.</span> | The AWS Cognito authorization server returns refresh tokens to the browser, which should not be done when using this flow. |
+| <span style={{color:'red'}}>Access Tokens in the Browser.</span> | These days you should also avoid returning access tokens to the browser due to XSS threats. |
 
-In addition, when AWS Cognito is used as the authorization server, it has reliability problems that prevent iframe token renewal from working. In order to provide a basically working solution, the SPA uses the refresh token to renew access tokens when the provider is AWS Cognito. Since the refresh token is stored in memory, it is discarded and there is a full window redirect whenever the browser page is reloaded.
+With AWS Cognito there are also some reliability problems with iframe token renewal. To provide a working and reliable solution, the SPA uses the refresh token to renew access tokens when the provider is AWS Cognito. Since I store the refresh token in-memory, there is an OpenID Connect redirect whenever the browser page is reloaded.
 
 To activate iframe based token renewal, simply set a different provider name in the SPA’s configuration file. Then run options such as refreshing the browser page to understand the problems:
 
@@ -66,11 +66,11 @@ To activate iframe based token renewal, simply set a different provider name in 
 }
 ```
 
-Yet the code sample is intended to demonstrate iframe based token renewal and behaves this way if points to an authorization server that supports the correct behaviour. Therefore the key points of its implementation are therefore described next.
+Yet the code sample is intended to demonstrate iframe-based token renewal and behaves this way if points to an authorization server that supports the correct behaviour. Therefore, I describe the intended behavior next.
 
 ### Silent Token Renewal Implementation
 
-A minimal iframe application performs the job of receiving iframe silent token renewal responses, so the entry point *index.ts* file now looks like this, to detect whether a frame or the main SPA are executing:
+The SPA consists of a main window and a dynamic iframe that implements iframe redirects. JavaScript applications run on both of these windows, yet I want to avoid the need for separate HTML files or JavaScript bundles for the iframe application. Therefore, the entry point *index.ts* file now contains the following code, to detect whether the frame or top level window runs:
 
 ```typescript
 if (window.top === window.self) {
@@ -85,7 +85,7 @@ if (window.top === window.self) {
 }
 ```
 
-Silent renewal is initiated from the main window, and the oidc-client-ts library spins up an iframe and runs an authorization code flow (PKCE) redirect on it, using the OpenID Connect *prompt=none* parameter:
+Initially, the iframe app does not exist. The main window creates it when it initiates token renewal. The oidc-client-ts library spins up an iframe and runs an authorization code flow with PKCE, using the OpenID Connect *prompt=none* parameter:
 
 ```typescript
 private async _performAccessTokenRenewalViaIframeRedirect(): Promise<void> {
@@ -98,7 +98,7 @@ private async _performAccessTokenRenewalViaIframeRedirect(): Promise<void> {
 
         if (e.error === ErrorCodes.loginRequired) {
 
-            await this._userManager.removeUser();
+            await this.clearLoginState();
 
         } else {
 
@@ -108,11 +108,11 @@ private async _performAccessTokenRenewalViaIframeRedirect(): Promise<void> {
 }
 ```
 
-On success a response URL of the following form is received, containing the authorization code:
+My *IFrameApp* class gets instantiated when the authorization server redirects the iframe back to the SPA, which receives a response URL of the following form, containing the authorization code:
 
 - *https://www.authsamples-dev.com/spa?code=xxx&state=yyy*
 
-The below code then runs in the minimal iframe app to send the response URL to the SPA’s main window, which then deals with exchanging the code for tokens and storing results:
+The job of the iframe app is to POST the response URL to the SPA’s main window, which then exchanges the code for tokens. The tokens are then stored in-memory.
 
 ```typescript
 export class IFrameApp {
@@ -147,7 +147,7 @@ export class IFrameApp {
 
 ### Security Library Behaviour
 
-The oidc-client-ts library uses the [PostMessage API](https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage) to send the authorization response URL from the iframe to the main window. You can use code such as this to intercept the posted message and view the data:
+The oidc-client-ts library uses the [PostMessage API](https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage) to send the authorization response URL from the iframe to the main window. You can use code such as the following to intercept the posted message and view the data:
 
 ```typescript
 window.addEventListener('message', (evt) => {
@@ -155,39 +155,39 @@ window.addEventListener('message', (evt) => {
 });
 ```
 
-The main window then exchanges the code for tokens, using the PKCE *code_verifier* that was saved to session storage before the iframe redirect. You can view the oidc-client-ts library’s logging output, including validation of received tokens. To do so, append *#log=debug* to the SPA URL, and also ensure that the browser console tools use the *Preserve Log* and *All Levels* options:
+When the main window exchanges the code for token it uses the PKCE *code_verifier* that was saved to session storage before the iframe redirect. You can view the oidc-client-ts library’s logging output, including validation of received tokens. To do so, append *#log=debug* to the SPA URL, and also ensure that the browser console tools use the *Preserve Log* and *All Levels* options:
 
 ![oidc browser logs](/images/180/oidc-browser-logs.jpg?v=20240813)
 
 ### SPA Basic Logout
 
-OpenID Connect RP initiated logout is trivial to implement, and our configuration instructs the oidc-client-ts library to return to the SPA’s post logout location afterwards:
+To implement logout I remove tokens from the app and then perform an OpenID Connect RP-initiated logout to remove the SSO cookie. The oidc-client-ts library does this in a one-liner. Yet AWS Cognito, like some other authorization servers, has vendor-specific logout behavior. The SPA therefore has to implement a workaround, which is an annoyance.
 
 ```typescript
-private async _startLogout(): Promise<void> {
+public async startLogout(): Promise<void> {
 
     try {
 
+        await this.clearLoginState();
+        HtmlStorageHelper.raiseLoggedOutEvent();
+
         if (this._configuration.provider === 'cognito') {
 
-            await this._userManager.removeUser();
             location.replace(this._getCognitoEndSessionRequestUrl());
 
         } else {
 
             await this._userManager.signoutRedirect();
         }
-
-        HtmlStorageHelper.isLoggedIn = false;
-        HtmlStorageHelper.multiTabLogout = true;
+    }
 }
 ```
 
-Some special handling is required for AWS Cognito, which requires a vendor specific end session request message.
-
 ### SPA Multi Tab Logout
 
-The sample also supports multi-tab logout, as described in our earlier <Link href='/posts/logout'>Logout</Link> post. Rather than using OAuth iframe mechanisms that use the SSO session cookie, the SPA simply watches an *isLoggedOut* boolean flag in local storage, using the [Browser Storage API](https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API):
+The sample also supports multi-tab logout, described in the earlier <Link href='/posts/logout'>Logout</Link> post. Rather than attempting to use single-logout solutions that send the SSO cookie from iframes, the SPA simply watches an *isLoggedOut* boolean in local storage, using the [Browser Storage API](https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API).
+
+If a user runs multiple tabs and signs out on one of them, the following code then run in all other tabs, each of which simply removes its tokens and redirects the user to the logged out view.
 
 ```typescript
 private _onStorageChange(event: StorageEvent): void {
@@ -200,19 +200,9 @@ private _onStorageChange(event: StorageEvent): void {
 }
 ```
 
-If a user is running multiple tabs and signs out on one of them, the above code will then run in all other tabs, each of which will simply remove its tokens and redirect the user to the logged out view:
-
-```typescript
-public async onExternalLogout(): Promise<void> {
-
-    await this._userManager.removeUser();
-    HtmlStorageHelper.isLoggedIn = false;
-}
-```
-
 ### SPA Calls API to get User Info
 
-Finally, the SPA gets name details from the AWS Cognito user info endpoint, and some secondary user attributes from the API, then displays both together in the top right of the view:
+Finally, the SPA gets name details from the authorization server's OpenID Connect userinfo endpoint, and some secondary user attributes from the API, then displays both together in the top right of the view:
 
 ```typescript
 public async load(authenticator: Authenticator, apiClient: ApiClient): Promise<void> {
@@ -247,9 +237,9 @@ public async load(authenticator: Authenticator, apiClient: ApiClient): Promise<v
 
 ### Where Are We?
 
-We have completed coding of the traditional SPA flow, where access tokens are stored in memory in the browser, and the SSO session cookie is used to silently renew short lived access tokens when they expire.
+I explained the code to complete the traditional SPA flow, with in-memory storage of access tokens, and the SSO cookie used for token refresh.
 
 ### Next
 
-- Next we will take an equivalent look to the <Link href='/posts/updated-api-coding-key-points'>API Coding Key Points</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- Next I provide an <Link href='/posts/updated-api-coding-key-points'>Updated API Code Overview</Link>.
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
