--- a/posts/improved-spa-code-sample-overview.mdx
+++ b/posts/improved-spa-code-sample-overview.mdx
@@ -9,7 +9,7 @@ The updated SPA and API code sample has the following additional features:
 | Feature | Description |
 | ------- | ----------- |
 | <span style={{color:'green'}}>**Claims Based Authorization**</span> | The API provides a more complete and future-proof claims-based authorization solution. |
-| <span style={{color:'green'}}>**In Memory Token Storage**</span> | The SPA now stores OAuth tokens only in memory, to improve the browser security a little. |
+| <span style={{color:'green'}}>**In-Memory Token Storage**</span> | The SPA now stores OAuth tokens only in-memory, to improve the browser security a little. |
 | <span style={{color:'green'}}>**Silent Token Renewal**</span> | The SPA now supports silent access token renewal using the SSO cookie. |
 | <span style={{color:'green'}}>**Multi Tab Browsing**</span> | The token renewal solution enables multi tab-browsing without noticeable user impact. |
 | <span style={{color:'green'}}>**Logout**</span> | The SPA implements a basic form of logout, including logout across multiple browser tabs. |
