--- a/posts/updated-api-coding-key-points.mdx
+++ b/posts/updated-api-coding-key-points.mdx
@@ -1,6 +1,6 @@
 # Updated API – Coding Key Points
 
-In our previous post we described the <Link href='/posts/updated-spa-coding-key-points'>SPA Coding Key Points</Link> for the updated code sample. Next we will look at the main API code changes.
+In the previous post I provided an <Link href='/posts/updated-spa-coding-key-points'>SPA Code Overview</Link> for the second code sample. Next I summarize the main API code changes.
 
 ### API Authorization Implementation
 
